New --colormap in ConvertType, with HSV, SLS and gray colormaps
Until now, for displaying single-channel datasets, the only option in
ConvertType was grayscale. With this commit a new `--colormap' option has
been added that allows the specification of which color map to use.

--- a/NEWS
+++ b/NEWS
@@ -16,6 +16,13 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   Arithmetic:
     --onedasimage: write output as an image if it has one dimension, not table.
 
+  ConvertType:
+    --colormap: color map to display a single-channel dataset (for example
+      FITS image) with a range of colors in formats that support color
+      (like JPEG, or PDF). Until now, the only available mapping was
+      grayscale. Now "Hue, Saturation, Value" (HSV) and "SLS" (from SAO
+      DS9) colormaps are also supported.
+
   Convolve:
     - Convolves 1D arrays (table columns, for example spectra)
       also. Therefore two new options have been added to it: `--column'
