ConvertType converts RGB to HSV with new --rgbtohsv option
With this new option, it is now possible to convert the the RGB input
channels to HSV (stored as a FITS image).

--- a/NEWS
+++ b/NEWS
@@ -22,6 +22,8 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
       (like JPEG, or PDF). Until now, the only available mapping was
       grayscale. Now "Hue, Saturation, Value" (HSV) and "SLS" (from SAO
       DS9) colormaps are also supported.
+    --rgbtohsv: Convert the RGB input channels to HSV (when the output is
+      in FITS format).
 
   Convolve:
     - Convolves 1D arrays (table columns, for example spectra)
