Arithmetic only collapses WCS once
Until now, when there was more than one collapse operator, Arithmetic will
crash with an error in `gal_wcs_remove_dimension' complaining about having
a 2-dimensional WCS. This was because in Arithmetic, we only have one WCS
structure and we were collapsing it two times.

To fix the issue, an integer is added in the main structure to mark if the
WCS structure has already been collapsed or not. The WCS collapse will only
happen if it hasn't already been done.

--- a/NEWS
+++ b/NEWS
@@ -153,6 +153,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #55025: MakeCatalog's `--prepforconv' option being ignored.
   bug #55079: Blank EPS or PDF page when width options not given.
   bug #55157: No sanity check on values given to Crop's --section.
+  bug #55295: Crash when more than one collapse operator called.
 
 
 
