Correct ordering of Fits program --write and --update values
These two options for the Fits program enable writing/updating of FITS
keywords into a FITS header. But unlike what the manual claimed, they were
writing the keywords in reverse order! This has been fixed now with a
simple call to `gal_fits_key_list_reverse'.

This fixes bug #55313.

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,21 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
+
+* Noteworthy changes in release X.X (library X.X.X) (YYYY-MM-DD) [stable]
+
+** New features
+
+** Removed features
+
+** Changed features
+
+** Bugs fixed
+  bug #55313: Fits program writing --write values in reverse order
+
+
+
+
+
 * Noteworthy changes in release 0.8 (library 6.0.0) (2018-12-28) [stable]
 
 ** New features
