Institutions in THANKS made similar to acknowledgments in book
The institutions mentioned in the `THANKS' file were set to be the same as
those mentioned in the end of the Acknowledgments section of the book.

--- a/THANKS
+++ b/THANKS
@@ -87,8 +87,7 @@ Institutions
 
 Host institutions of Gnuastro's developers.
 
-    Ministry of education, culture, sports, science and technology, Japan.
-    Tohoku University, Sendai, Japan.
+    Tohoku University Astronomical Institute, Sendai, Japan.
     University of Salento, Lecce, Italy.
-    Centre de Recherche Astrophysique de Lyon, France
-    Centre national de la recherche scientifique, France
+    Centre de Recherche Astrophysique de Lyon (CRAL), Lyon, France.
+    Instituto de Astrofisica de Canarias (IAC), Tenerife, Spain.
