Minor corrections in Fits program's --verify info
In the book, it was added that with the `--quiet' option, users can supress
the extra information that is printed with the `--verify' option. Also, in
the program, the extra information was made to be more clear (with every
extra line being printed above the final verify outputs (not before and
after it).

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -10401,6 +10401,10 @@ will print @code{NOT-PRESENT}, and if they cannot be verified it will print
 @code{INCORRECT}. In the latter case (when the keyword values exist but
 can't be verified), the Fits program will also return with a failure.
 
+By default this function will also print a short description of the
+@code{DATASUM} AND @code{CHECKSUM} keywords. You can supress this extra
+information with @code{--quiet} option.
+
 @item -Q
 @itemx --quitonerror
 Quit if any of the operations above are not successful. By default if
